--- a/Boatify/Views/Home/Index.cshtml
+++ b/Boatify/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-4">
-            <h2>Search</h2>
+            <h2>Search haha</h2>
             <p>Find the perfect ticket for your journey. Search by origin, destination and date.</p>
         </div>
         <div class="col-md-4">
